# lexicon

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  main.yml
src/: main.rs
