[package]
name = "lexicon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.0", features = ["full"] }
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"